nombre de la bd

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   var tipoorig="";
   var nom_orig="";
   var comen="";
-  var bd= openDatabase('BDfra','1.0','base datos frases',5*1024*1024);
+  var bd= openDatabase('BDfrases','1.0','base datos frases',5*1024*1024);
   document.addEventListener("ondeviceready",onDeviceReady,false);
 
   //comprobar si hay acceso a la bd(navegador), si lo hay crear tablas
